# iot-auth-protocol

./: .gitignore  CMakeLists.txt  PERFORMANCE.md  compare_methods.py  download_socofing.py  extract_fvc_resnet.py  generate_report.py  method_a_resnet34.py  method_b_clahe_gabor_resnet.py  method_h_patch_tokens.py  retest_hq_dataset.py  simulate_features.py  start.sh  test_performance.py  test_socofing_all_methods.py  unified_test_plan_vault.csv  wsl_forwarder.ps1  后量子 IoT 认证协议 (ML-KEM-768).html  面向后量子的认证协议.txt
AndroidClient/: settings.gradle.kts
AndroidClient/app/: build.gradle.kts
AndroidClient/app/src/androidTest/java/com/filo/iotauth/: ExampleInstrumentedTest.kt
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/cpp/: BioModule.cpp  BioModule.h  CMakeLists.txt  CryptoModule.cpp  CryptoModule.h  DeterministicECC.cpp  PUFModule.cpp  PUFModule.h  ProtocolMessages.h  ReedSolomon.cpp  ReedSolomon.h  SecureBytes.h  SecureCredentialManager.cpp  SecureCredentialManager.h  SecureRecordLayer.cpp  SecureRecordLayer.h  User.cpp  User.h  native-lib.cpp
AndroidClient/app/src/main/java/com/filo/iotauth/: MainActivity.kt
AndroidClient/app/src/main/res/layout/: activity_main.xml
AndroidClient/app/src/main/res/values/: strings.xml  themes.xml
AndroidClient/app/src/main/res/values-night/: themes.xml
AndroidClient/app/src/test/java/com/filo/iotauth/: ExampleUnitTest.kt
AndroidClient/gradle/wrapper/: gradle-wrapper.properties
formal_verification/: README.md  protocol.pv  protocol_pqc.pv  protocol_pqc.spthy  run_verification.sh
include/: BCHCodec.h  BioModule.h  BioModuleV2.h  CryptoModule.h  CryptoModulePQC.h  DeterministicECC.h  FuzzyVault.h  PUFModule.h  ProtocolMessages.h  ProtocolMessagesPQC.h  SecureCredentialManager.h  SecureRecordLayer.h  Server.h  ServerPQC.h  User.h  UserPQC.h
results/: all_methods_comparison.txt
results/method_a_resnet34/: test_result.txt
results/method_b_clahe_gabor_resnet/: test_result.txt
results/method_simulated_baseline/: test_result.txt
results/soc_method_a_resnet34/: test_result.txt
results/soc_method_b_clahe_gabor/: test_result.txt
results/soc_method_h_patch_hamming3/: test_result.txt
src/: BCHCodec.cpp  BioModule.cpp  BioModuleV2.cpp  CryptoModule.cpp  CryptoModulePQC.cpp  FuzzyVault.cpp  PUFModule.cpp  SecureCredentialManager.cpp  SecureRecordLayer.cpp  Server.cpp  ServerPQC.cpp  User.cpp  UserPQC.cpp  main_server.cpp  main_server_pqc.cpp
test/: test_batch_vault.cpp  test_batch_vault_v2.cpp  test_bio.cpp  test_crypto.cpp  test_fuzzy_vault.cpp  test_protocol_flow.cpp  test_real_dataset.cpp  test_real_vault.cpp
thesis_figures/ch5/: proverif_ecdh_result.txt  proverif_pqc_result.txt  s1_proverif_visualization.py  s2_security_comparison.py  s3_roc_det_curve.py  s4_puf_analysis.py
thesis_figures/ch6/: p1_crypto_benchmark.py  p2_protocol_latency.py  p3_communication_overhead.py  p4_scalability_ecc.py
web/: package-lock.json  package.json  pqc.html  vite.config.ts
web/src/: App.vue  AppPQC.vue  main-pqc.ts  main.ts
web/src/pqc/: benchmark.ts  ecdh-protocol.ts  pqc-client.ts  pqc-crypto.ts  pqc-server.ts  types.ts
后量子 IoT 认证协议 (ML-KEM-768)_files/: client  main-pqc.ts
